fixed profile page to have all profile details

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -8,7 +8,7 @@
 <!-- option to edit the users profile -->
 <div class="row">
     <div class="col">
-        <a href="{% url 'edit_profile' user.id %}" class="btn btn-primary newPost">Edit Profile</a>
+        <a href="#" class="btn btn-primary newPost">Edit Profile</a>
     </div>
 </div>
 <!-- calls up users details -->
@@ -31,16 +31,10 @@
                 <p><b>Email Adress: </b>{{ user.email }}</p>
                 <p><b>About Me: </b>{{ user.profile.about_me }}</p>
                 <p><b>Nationality: </b>{{ user.profile.nationality }}</p>
-                <p><b>Profile Created: </b>{{ user.profile.created_date|date:"d F, Y"  }}</p>
+                <p><b>Profile Created: </b>{{ user.profile.created_date|date:"d F, Y" }}</p>
             </div>
         </div>
     </div>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %} 
-        {{ u_form | as_bootstrap  }}
-        {{ p_form | as_bootstrap  }}
-        <button type="submit" class="btn btn-primary">Update</button>
-    </form>
 </div>
 <hr>
 
