--- a/templates/base.html
+++ b/templates/base.html
@@ -95,19 +95,19 @@
                 <div class="col">
                     <a class="footer_text bali" href="\">Bali Silver</a>
                     <p class='payment-icons footer_text'>
-                        <a href="https://www.visa.com"><i class="fab fa-cc-visa fa-2x"></i></a>
-                        <a href="https://www.mastercard.com"><i class="fab fa-cc-mastercard fa-2x"></i></a>
-                        <a href="https://www.diners.com"><i class="fab fa-cc-diners fa-2x"></i></a>
-                        <a href="https://www.americanexpress.com"><i class="fab fa-cc-amex fa-2x"></i></a>
-                        <a href="https://www.stripe.com"><i class="fab fa-stripe fa-3x pay-icon"></i></a>
+                        <a href="https://www.visa.com" target="_blank"><i class="fab fa-cc-visa fa-2x"></i></a>
+                        <a href="https://www.mastercard.com" target="_blank"><i class="fab fa-cc-mastercard fa-2x"></i></a>
+                        <a href="https://www.diners.com" target="_blank"><i class="fab fa-cc-diners fa-2x"></i></a>
+                        <a href="https://www.americanexpress.com" target="_blank"><i class="fab fa-cc-amex fa-2x"></i></a>
+                        <a href="https://www.stripe.com" target="_blank"><i class="fab fa-stripe fa-3x pay-icon"></i></a>
                     </p>
                     <p class="footer_text">Contact us at BaliSilver@example.com</p>
                     <p class='SoMe-icons footer_text'>
-                        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
-                        <a href="https://www.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
-                        <a href="https://www.google.com"><i class="fab fa-google-plus-g fa-2x"></i></a>
-                        <a href="https://www.pinterest.com"><i class="fab fa-pinterest fa-2x"></i></a>
-                        <a href="https://www.youtube.com"><i class="fab fa-youtube fa-2x"></i></a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                        <a href="https://www.google.com" target="_blank"><i class="fab fa-google-plus-g fa-2x"></i></a>
+                        <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest fa-2x"></i></a>
+                        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
                     </p>
                     <p class="footer_text">Copywrite 2019 Andrew Phillips</p>
                 </div>
