adding to contact view to create value equal to user details

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -6,9 +6,12 @@
 {% block page_heading %}Contact Us{% endblock %}
 {% block content %}
 <!-- calls up contact page template -->
-<form method="POST">
+
+<form method="POST" enctype="multipart/form-data">
+
     {% csrf_token %}
     {{ form | as_bootstrap }}
+    
     <input class="btn btn-primary" type="submit" value="Submit">
 </form>
 
