--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -19,7 +19,7 @@
                 <a class="story-img" href="#">
                     <img src="{{ post.author.profile.image.url }}" class="img-circle">
                 </a>
-                <p><span class="boldtext">Author:</span>{{ post.author }}</p>
+                <p><span class="boldtext">Author:</span>{{ post.user }}</p>
             </div>
             <div class="col-md-10 col-sm-9">
                 <h3>{{ post.title }}</h3>
