--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -8,19 +8,19 @@
     <div class="row">
         <div class="col-md-2 col-sm-3 text-center">
             <a class="story-img" href="#">
-                <img src="{{ object.author.profile.image.url }}" class="img-circle">
+                <img src="{{ post.author.profile.image.url }}" class="img-circle">
             </a>
-            <p><span class="boldtext">Author:</span>{{ object.user }}</p>
+            <p><span class="boldtext">Author:</span>{{ post.user }}</p>
         </div>
         <div class="col-sm-10 col-md-9">
             {% if post.image %}
-                <img class="img-blogpost" src="/media/{{ object.image }}">
+                <img class="img-blogpost" src="/media/{{ post.image }}">
             {% endif %}
-            <h3>{{ object.title }}</h3>
+            <h3>{{ post.title }}</h3>
             <div class="row">
                 <div class="col-xs-9 detail">
-                    <p>{{ object.content }}</p>
-                    <p><span class="boldtext">Published on:</span> {{ object.published_date }} </p>
+                    <p>{{ post.content }}</p>
+                    <p><span class="boldtext">Published on:</span> {{ post.published_date }} </p>
                     <p><span class="boldtext">Views:</span> {{post.views}}</p>
                     <p><span class="boldtext">Tag:</span> {{ post.tag }}</p>
                     <a href="{% url 'get_posts' %}" class="btn btn-primary">Back to Blog</a>
