--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -33,7 +33,7 @@
     <!-- option to edit the users profile -->
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %} {{ p_form | as_bootstrap }}{{ u_form | as_bootstrap }}
-        <button class="btn btn-outline-info" type="submit">Update</button>
+        <button class="btn btn-primary" type="submit">Update</button>
     </form>
 </div>
 <hr>
