--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -20,7 +20,7 @@
             <p class="glyphicon glyphicon-gbp">{{ item.product.price }}</p>
             <p>
             <!-- allows user to edit cart item --> 
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+                <form class="form-inline" method="post" action="{% url 'cart_action' item.id %}">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="exampleInputAmount" class="sr-only">New Qty</label>
@@ -30,8 +30,8 @@
                             <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-success cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                    <button type="submit" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Delete</button>
+                    <button type="submit" name="_amend" class="btn btn-success cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                    <button type="submit" name="_delete" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Delete</button>
                 </form>
             </p>
         </div>
