--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -7,7 +7,11 @@
 {% block content %}
 
 <!-- calls up users details -->
+
 <div class="row">
+<!--
+{% if user.is_authenticated %}
+
     <div class="col-md-2 col-sm-3 text-center">
         <a class="story-img" href="#">
             {% if user.image %}    
@@ -23,13 +27,16 @@
         <h3>{{ user.profile.name }}</h3>
         <div class="row">
             <div class="col-xs-9">
-                <p><b>Email Adress: </b>{{ user.email }}</p>
+                <p><b>Username: </b>{{ user.username }}</p>
+                <p><b>Email Address: </b>{{ user.email }}</p>
                 <p><b>About Me: </b>{{ user.profile.about_me }}</p>
                 <p><b>Nationality: </b>{{ user.profile.nationality }}</p>
                 <p><b>Profile Created: </b>{{ user.profile.created_date|date:"d F, Y" }}</p>
             </div>
         </div>
     </div>
+{% endif %}
+-->
     <!-- option to edit the users profile -->
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %} {{ p_form | as_bootstrap }}{{ u_form | as_bootstrap }}
