--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -14,10 +14,10 @@
     </div>
 </div>
     {% for post in posts %}
-        <div class="row">
+        <div class="panel-body">
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="{{ post.author.profile.image.url }}" class="img-circle">
+                    <img src="{{ post.user.profile.image.url }}" class="img-circle">
                 </a>
                 <p><span class="boldtext">Author:</span>{{ post.user }}</p>
             </div>
