--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -8,14 +8,17 @@
     <div class="row">
         <div class="col-md-2 col-sm-3 text-center">
             <a class="story-img" href="#">
-                <img src="{{ post.author.profile.image.url }}" class="img-circle">
+                <img src="{{ post.owner.profile.image.url }}" class="img-circle">
             </a>
-            <p><span class="boldtext">Author:</span>{{ post.user }}</p>
+            <p><span class="boldtext">Author:</span>{{ post.username }}</p>
         </div>
+        
         <div class="col-sm-10 col-md-9">
+            
             {% if post.image %}
                 <img class="img-blogpost" src="/media/{{ post.image }}">
             {% endif %}
+            
             <h3>{{ post.title }}</h3>
             <div class="row">
                 <div class="col-xs-9 detail">
@@ -24,7 +27,11 @@
                     <p><span class="boldtext">Views:</span> {{post.views}}</p>
                     <p><span class="boldtext">Tag:</span> {{ post.tag }}</p>
                     <a href="{% url 'get_posts' %}" class="btn btn-primary">Back to Blog</a>
-                    <!-- <a href="{% url 'edit_post' post.id %}" class="btn btn-primary">Edit Post</a> -->
+            
+                    {% if user.is_authenticated and user == post.username or user.is_superuser %}
+                    <a href="{% url 'edit_post' post.id %}" class="btn btn-primary">Edit Post</a>
+                    {% endif %}
+            
                     <hr>
                 </div>
             </div>
