added styling to registration pages

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -14,7 +14,7 @@
                 Since its launch in 2020, the site has seen grown into the UK's leading retailers of Harmony Bells.
             </p>
             <p>
-                We are an ethical importer with providing the best possible price for the local Balinese silver jewelery makers.
+                We are an ethical importer with providing the best possible price for the local Balinese silver jewellery makers.
             </p>
         </div>
     </div>
