--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,5 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static from staticfiles %}
 {% load bootstrap_tags %}
+
 {% block title %}Setting New password{% endblock %}
 <!-- from to reset password with error msg if unsuccessful-->
 {% block content %}
