--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,5 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static from staticfiles %}
 {% load bootstrap_tags %}
+
 {% block title %}Password reset complete{% endblock %}
 <!-- template to show once password reset-->
 {% block content %}
