--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+{% load static from staticfiles %}
 {% load bootstrap_tags %}
+
 {% block page_title %}Password Reset Page{% endblock %} 
 
 {% block page_heading %}Reset Password{% endblock %}
